2011-05-31  Peter Bloomfield

	* src/main.c (mw_message_received_cb): present compose window;
	(main): give unique_app_new_with_commands a non-NULL startup-id,
	because when NULL it creates a fake timestamp, which results in
	the running window being presented.

2011-05-28  Peter Bloomfield

	* src/main.c (balsa_handle_automation_options): do not send
	ACTIVATE when asked for status; see
	http://mail.gnome.org/archives/balsa-list/2011-May/msg00015.html

2011-04-16  Peter Bloomfield

	Use GDesktopAppInfo instead of GAppInfo

	* configure.in: add gio-unix-2.0 to gnome-extras so we can use
	GDesktopAppInfo.
	* src/save-restore.c (config_defclient_save): use GDesktopAppInfo
	instead of GAppInfo to set Balsa as default client.

2011-04-15  Peter Bloomfield

	Fix bz #647695; Pawel's patch for master, with one change.

	* src/balsa-message.c (bm_find_bar_new), (balsa_message_init),
	(balsa_message_find_in_message): show all of the widget before
	adding the find bar.
	* src/message-window.c (message_window_new): show the widget,
	not show all.

2011-04-14  Peter Bloomfield

	* src/save-restore.c (config_defclient_save): fix launch
	commandline.

2011-04-13  Peter Bloomfield

	Migrate from GConf

	* configure.in: do not check gconf-2.0.
	* libinit_balsa/assistant_page_defclient.c
	(balsa_druid_page_defclient_init), (balsa_druid_page_defclient),
	(balsa_druid_page_defclient_toggle): use GAppInfo to check
	default mailer.
	* src/save-restore.c (config_defclient_save): use GAppInfo to
	set default mailer.
	* website/faq.html: update.

2011-04-06  Peter Bloomfield

	* src/main-window.c: implement alt-n to switch to mailbox n.

2011-04-06  Peter Bloomfield

	* balsa.desktop.in: declare Balsa to be
	MimeType=x-scheme-handler/mailto.

2011-04-05  Peter Bloomfield

	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text): new
	GtkSourceView macro.

2011-02-05  Peter Bloomfield

	* src/balsa-message.c (hide_all_parts): just destroy the
	children, no need to recurse deeper.
