@@ -1,3 +1,12 @@
+2011-06-01  Peter Bloomfield
+
+	Respond to
+	<URL:http://mail.gnome.org/archives/balsa-list/2011-May/msg00023.html>
+
+	* src/sendmsg-window.c (setup_headers_from_message): make the
+	blank line in the recipient widget not a Bcc: line;
+	(setup_headers_from_identity): ditto.
+
 2011-05-31  Peter Bloomfield
 
 	* src/main.c (mw_message_received_cb): present compose window;
